# pyspeckit

./: .gitignore  .gitmodules  .hgignore  .hgtags  .htaccess  .readthedocs.yaml  .rtd-environment.yml  .setup_conda.sh  .travis.yml  CHANGES  CHANGES.rst  CITATION.cff  INSTALL.txt  LICENSE  MANIFEST.in  README.rst  README.txt  REQUIREMENTS  TEMPLATE_CHANGES.md  ah_bootstrap.py  appveyor.yml  config.py  conftest.py  cubes.py  ez_setup.py  gaussfitter.py  index.html  install_via_GitHub.rst  install_via_GitHub.txt  pyproject.toml  setup.cfg  setup.py  spectrum.py  tox.ini  voigtsubs.f
cubes/: SpectralCube.py  __init__.py  cubes.py  mapplot.py  posang.py  readers.py
doc/: Makefile  baseline.rst  classes.rst  conf.py  cubes.rst  example_h2co.rst  example_h2co_mm.rst  example_hcn.rst  example_hcop.rst  example_n2hp.rst  example_nh2p.rst  example_nh3.rst  example_nh3_cube.rst  example_pymc.rst  example_sdss.rst  example_sn.rst  example_template.rst  example_vega_echelle.rst  examples.rst  features.rst  fitsfiles.rst  fitting.rst  gbtfiles.rst  guide_class.rst  guide_iraf.rst  hdf5files.rst  index.rst  install.rst  interactive.rst  measurements.rst  models.rst  parameters.rst  projects.rst  pyspeckit.rst  readers.rst  registration.rst  spectrum.rst  txtfiles.rst  units.rst  wrappers.rst
docs/: Makefile  ammonia_model.rst  baseline.rst  basic_plot.py  classes.rst  classfiles.rst  conf.py  cubes.rst  example_LTE.rst  example_LTE_lineforest.py  example_MUSE.rst  example_NIR_cube.rst  example_continuum_fromscratch.py  example_continuum_fromscratch.rst  example_cube_fromscratch.rst  example_fromscratch.py  example_fromscratch.rst  example_h2co.rst  example_h2co_mm.rst  example_hcn.rst  example_hcop.py  example_hcop.rst  example_minimal_cube.rst  example_n2hp.rst  example_n2hp_cube.rst  example_nh3.rst  example_o-nh2d.rst  example_p-nh2d.rst  example_pymc.rst  example_pymc_ammonia.rst  example_sdss.py  example_sdss.rst  example_sn.rst  example_template.rst  example_vega_echelle.py  example_vega_echelle.rst  examples.rst  faq.rst  features.rst  fit_custom_model.rst  (+31 more)
examples/: 02232_plus_6138.txt  AmmoniaLevelPopulation.ipynb  NH3 cube fitting and inspection with pyspeckit.ipynb  NH3 cube inspection with pyspeckit.ipynb  __init__.py  agn_example.py  ammonia_fit_example.py  ammonia_fit_example_wrapper.py  ammonia_vtau_fit_example.py  ammonia_vtau_multitem_example.py  config  cube_from_scratch_example.py  cube_minimal_example.py  doublet_example.py  example_h2co_mm_spectrum.apex  example_oNH2D.py  example_pNH2D.py  example_pymc.py  example_pymc_ammonia.py  fit_nh3_cube.py  gbt_sdfits_example.py  h2co_mm_example.py  h2co_mm_example_despotic.py  hcn_cube_test.py  hcn_example.py  interactive_example_hr2421.py  multivoigt.py  n2hp_cube.fits  n2hp_cube_example.py  n2hp_example.py  n2hp_opha_example.fits  reduce_class.py  run_examples.py  sn2009ip_halpha.fits  sn_deredden_example.py  sn_example.py  synthetic_LTE_ammonia_spectrum_example_witherrorestimates.py  synthetic_nLTE_ammonia_spectrum_example_witherrorestimates.py  synthetic_spectrum_example.py  synthetic_spectrum_example_witherrorestimates.py  (+1 more)
html/: .htaccess  doublet_example.html  doublet_example.html.php  examples.html  examples.html.php  h2co_example.html  h2co_example.html.php  n2hp_example.html.php  navbar.php  nh3_example.html  nh3_example.html.php  parse_php.py  prettify.css  reviews.html  sdss_example.html  sdss_example.html.php  search.html  style.css
licenses/: APACHE2.rst  BSD2.rst  BSD3.rst  GPLv3.rst  LICENSE.rst  README.rst
mpfit/: __init__.py  mpfit.py  mpfitexpr.py
packagename/: __init__.py  _astropy_init.py  conftest.py  example_mod.py
parallel/: parallel_map.py
pyspeckit/: __init__.py  __version__.py  config.py  config_default  conftest.py  specwarnings.py
scripts/: README.rst  pyspeckit  pyspeckit.py  pyspeckit_script.py
spectrum/: __init__.py  baseline.py  config.py  cosmology.py  fitters.py  gaussfitter.py  history.py  logger.py  measurements.py  obstools.py  plotters.py  ratosexagesimal.py  readers.py  showspec.py  speclines.py  spectrum.py  units.py  voigtfitter.py  writers.py
tests/: 010.473+002_HCOP_wide.fits  010.473+002_N2HP_wide.fits  10074-190_HCOp.fits  BD60596_merged.fits  G031.947+00.076_nh3_11_Tastar.fits  G203.04+1.76_h2co.fits  G203.04+1.76_h2co_Tastar.fits  SIIdoublet.fits  TEST_wrapper_nh3.py  alberto_example.py  alberto_example.txt  alfalfa_example.py  compare_images.py  evega.0039.rs.ec.dispcor.fits  hr2421.fit  jd_test.py  julian_infrared.txt  moments_test.py  nh3_tests.py  run_tests.py  sample_13CO.fits  sample_sdss.fits  sample_sdss.txt  simple_fit_example.py  simple_fit_interactive.py  simple_txt.txt  spectrum_4.txt  (+27 more)
(+257 files in other folders)
