[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
python_files = *_example.py
minversion = 2.2
norecursedirs = build docs/_build

[ah_bootstrap]
auto_use = True

[metadata]
package_name = pyspeckit
description = Toolkit for fitting and manipulating spectroscopic data in python
long_description = See README.rst and CHANGES.rst
author =Adam Ginsburg
author_email=pyspeckit@gmail.com
license = BSD
url = http://pyspeckit.readthedocs.org
edit_on_github = True
github_project = pyspeckit/pyspeckit

