[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[metadata]
name = pyspeckit
package_name = pyspeckit
description = Toolkit for fitting and manipulating spectroscopic data in python
long_description = See README.rst and CHANGES.rst
author =Adam Ginsburg
author_email=pyspeckit@gmail.com
license = BSD
url = http://pyspeckit.readthedocs.org
edit_on_github = True
github_project = pyspeckit/pyspeckit
version = 1.0.4.dev

[options]
zip_safe = False
packages = find:
install_requires =
    astropy
    numpy>=1.8.0
    radio_beam>=0.3.3
    six
    dask[array]
    joblib
    casa-formats-io

[options.extras_require]
test =
    pytest-astropy
    pytest-cov
    regions>=0.7
    numpy>=1.24.0
    astropy>=5.2.1
docs =
    sphinx-astropy
    matplotlib
noviz =
    zarr
    fsspec
    distributed
    pvextractor
    reproject>=0.9.1
    scipy
viz =
    aplpy
    matplotlib
    reproject
    pvextractor
viz_extra =
    glue-core[qt]
    yt ; python_version<'3.8'
dev =
    pvextractor
    radio-beam
    reproject
    regions

[options.package_data]
pyspeckit.tests =
    data/*
    data/*/*

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings
python_files = *_example.py

[coverage:run]
omit =
  pyspeckit/__init__*
  pyspeckit/conftest.py
  pyspeckit/*setup*
  pyspeckit/*/tests/*
  pyspeckit/tests/test_*
  pyspeckit/extern/*
  pyspeckit/utils/compat/*
  pyspeckit/version*
  pyspeckit/wcs/docstrings*
  pyspeckit/_erfa/*
  */pyspeckit/__init__*
  */pyspeckit/conftest.py
  */pyspeckit/*setup*
  */pyspeckit/*/tests/*
  */pyspeckit/tests/test_*
  */pyspeckit/extern/*
  */pyspeckit/utils/compat/*
  */pyspeckit/version*
  */pyspeckit/wcs/docstrings*
  */pyspeckit/_erfa/*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
